update html and questions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,20 @@
         <h1>Find out the best coding language for you!</h1>
         <form id="fillout-form"></form>
         <div class="form-group">
-            
+            <label for="name"> Please state your full name: </label>
+            <input type="text" id="name" class="form-conrol" >
+        </div>
+        <div class="question1">
+            <label for="question-one"> Do you like to travel?
+            <input type="radio" name="question1" value="Yes" checked> Yes
+            <input type="radio" name="question1" value="No"> No
+            </label>
+        </div>
+        <div class="question2">
+            <label for="question-two"> Do you play sports?
+            <input type="radio" name="question1" value="Yes"> Yes
+            <input type="radio" name="question1" value="No"> No
+            </label>
         </div>
     </div>
 
