Update html and add submit btn

--- a/index.html
+++ b/index.html
@@ -25,10 +25,30 @@
         </div>
         <div class="question2">
             <label for="question-two"> Do you play sports?
-            <input type="radio" name="question1" value="Yes"> Yes
-            <input type="radio" name="question1" value="No"> No
+            <input type="radio" name="question2" value="Yes"> Yes
+            <input type="radio" name="question2" value="No"> No
             </label>
         </div>
+        <div class="question3">
+            <label for="question-three"> Do you like coding?
+            <input type="radio" name="question3" value="Yes"> Yes
+            <input type="radio" name="question3" value="No"> No
+            </label>
+        </div>
+        <div class="question4">
+            <label for="question-four"> Do you speak more than one language?
+            <input type="radio" name="question4" value="Yes"> Yes
+            <input type="radio" name="question4" value="No"> No
+            </label>
+        </div>
+        <div class="question5">
+            <label for="question-five"> Do you care what others think of you?
+            <input type="radio" name="question5" value="Yes"> Yes
+            <input type="radio" name="question5" value="No"> No
+            </label>
+        </div>
+        <br/>
+        <button type="submit" class="btn-dark">Submit</button>
     </div>
 
 </body>
