--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <h1>Find out the best coding language for you!</h1>
-        <form id="fillout-form"></form>
+        <form id="fillout-form">
         <div class="form-group">
             <label for="name"> Please state your full name: </label>
             <input type="text" id="name" class="form-conrol" >
@@ -49,8 +49,21 @@
         </div>
         <br/>
         <button type="submit" class="btn-dark">Submit</button>
+    </form>
+    <br/>
+    <div id="suggestion1">
+        <p>Hello <span class="user_name"></span>,<br>If you like playing sports, you should pick Python as your first language you learn. 
+        </p>
     </div>
-
+    <div id="suggestion2">
+        <p>Hello <span class="user_name"></span>,<br>If you like to travel, you should pick Ruby as your first language you learn. 
+        </p>
+    </div>
+    <div id="suggestion3">
+        <p>Hello <span class="user_name"></span>,<br>If you can speak more than one language, you should pick C# as your first language you learn. 
+        </p>
+    </div>
+    </div>
 </body>
 
 </html>
