--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js"></script>
     <title>Program Suggester</title>
 </head>
@@ -13,56 +13,63 @@
     <div class="container">
         <h1>Find out the best coding language for you!</h1>
         <form id="fillout-form">
-        <div class="form-group">
-            <label for="name"> Please state your full name: </label>
-            <input type="text" id="name" class="form-conrol" >
-        </div>
-        <div class="question1">
-            <label for="question-one"> Do you like to travel?
-            <input type="radio" name="question1" value="Yes" checked> Yes
-            <input type="radio" name="question1" value="No"> No
-            </label>
-        </div>
-        <div class="question2">
-            <label for="question-two"> Do you play sports?
-            <input type="radio" name="question2" value="Yes"> Yes
-            <input type="radio" name="question2" value="No"> No
-            </label>
-        </div>
-        <div class="question3">
-            <label for="question-three"> Do you like coding?
-            <input type="radio" name="question3" value="Yes"> Yes
-            <input type="radio" name="question3" value="No"> No
-            </label>
-        </div>
-        <div class="question4">
-            <label for="question-four"> Do you speak more than one language?
-            <input type="radio" name="question4" value="Yes"> Yes
-            <input type="radio" name="question4" value="No"> No
-            </label>
-        </div>
-        <div class="question5">
-            <label for="question-five"> Do you care what others think of you?
-            <input type="radio" name="question5" value="Yes"> Yes
-            <input type="radio" name="question5" value="No"> No
-            </label>
-        </div>
+            <div class="form-group">
+                <label for="name">Please state your full name:</label>
+                <input type="text" id="name" class="form-control">
+            </div>
+
+            <div class="question">
+                <label for="question-one">Do you like to travel?
+                    <input type="radio" name="question1" value="Yes" checked> Yes
+                    <input type="radio" name="question1" value="No"> No
+                </label>
+            </div>
+
+            <div class="question">
+                <label for="question-two">Do you play sports?
+                    <input type="radio" name="question2" value="Yes"> Yes
+                    <input type="radio" name="question2" value="No"> No
+                </label>
+            </div>
+
+            <div class="question">
+                <label for="question-three">Do you like coding?
+                    <input type="radio" name="question3" value="Yes"> Yes
+                    <input type="radio" name="question3" value="No"> No
+                </label>
+            </div>
+
+            <div class="question">
+                <label for="question-four">Do you speak more than one language?
+                    <input type="radio" name="question4" value="Yes"> Yes
+                    <input type="radio" name="question4" value="No"> No
+                </label>
+            </div>
+
+            <div class="question">
+                <label for="question-five">Do you care what others think of you?
+                    <input type="radio" name="question5" value="Yes"> Yes
+                    <input type="radio" name="question5" value="No"> No
+                </label>
+            </div>
+
+            <br/>
+            <button type="submit" class="btn-dark">Submit</button>
+        </form>
+
         <br/>
-        <button type="submit" class="btn-dark">Submit</button>
-    </form>
-    <br/>
-    <div id="suggestion1">
-        <p>Hello <span class="user_name"></span>,<br>If you like playing sports, you should pick Python as your first language you learn. 
-        </p>
-    </div>
-    <div id="suggestion2">
-        <p>Hello <span class="user_name"></span>,<br>If you like to travel, you should pick Ruby as your first language you learn. 
-        </p>
-    </div>
-    <div id="suggestion3">
-        <p>Hello <span class="user_name"></span>,<br>If you can speak more than one language, you should pick C# as your first language you learn. 
-        </p>
-    </div>
+
+        <div class="suggestion" id="suggestion1">
+            <p>Hello <span class="user_name"></span>,<br>If you like playing sports, you should pick Python as your first language to learn.</p>
+        </div>
+
+        <div class="suggestion" id="suggestion2">
+            <p>Hello <span class="user_name"></span>,<br>If you like to travel, you should pick Ruby as your first language to learn.</p>
+        </div>
+
+        <div class="suggestion" id="suggestion3">
+            <p>Hello <span class="user_name"></span>,<br>If you can speak more than one language, you should pick C# as your first language to learn.</p>
+        </div>
     </div>
 </body>
 
