continue to update css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <h1>Find out the best coding language for you!</h1>
+        <h1>Pick The Best Coding Language</h1>
         <form id="fillout-form">
             <div class="form-group">
                 <label for="name">Please state your full name:</label>
