finish update css and start with JS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Pick The Best Coding Language</h1>
         <form id="fillout-form">
             <div class="form-group">
-                <label for="name">Please state your full name:</label>
+                <label for="name">State your full name:</label>
                 <input type="text" id="name" class="form-control">
             </div>
 
