fix JS and html

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
 
         <br/>
 
-        <div class="suggestion" id="suggestion1">
+        <div id="suggestion1">
             <p>Hello <span class="user_name"></span>,<br>If you like playing sports, you should pick Python as your first language to learn.</p>
         </div>
 
-        <div class="suggestion" id="suggestion2">
+        <div id="suggestion2">
             <p>Hello <span class="user_name"></span>,<br>If you like to travel, you should pick Ruby as your first language to learn.</p>
         </div>
 
-        <div class="suggestion" id="suggestion3">
+        <div id="suggestion3">
             <p>Hello <span class="user_name"></span>,<br>If you can speak more than one language, you should pick C# as your first language to learn.</p>
         </div>
     </div>
