--- a/index.html
+++ b/index.html
@@ -53,22 +53,25 @@
                 </label>
             </div>
 
-            <br/>
+            <br />
             <button type="submit" class="btn-dark">Submit</button>
         </form>
 
-        <br/>
+        <br />
 
         <div id="suggestion1">
-            <p>Hello <span class="user_name"></span>,<br>If you like playing sports, you should pick Python as your first language to learn.</p>
+            <p>Hello <span class="user_name"></span>,<br>If you like playing sports, you should pick Python as your
+                first language to learn.</p>
         </div>
 
         <div id="suggestion2">
-            <p>Hello <span class="user_name"></span>,<br>If you like to travel, you should pick Ruby as your first language to learn.</p>
+            <p>Hello <span class="user_name"></span>,<br>If you like to travel, you should pick Ruby as your first
+                language to learn.</p>
         </div>
 
         <div id="suggestion3">
-            <p>Hello <span class="user_name"></span>,<br>If you can speak more than one language, you should pick C# as your first language to learn.</p>
+            <p>Hello <span class="user_name"></span>,<br>If you can speak more than one language, you should pick C# as
+                your first language to learn.</p>
         </div>
     </div>
 </body>
